Update navigation links and footer branding
Changed navigation and footer links in index and HTML pages to point to actual forum and dashboards pages instead of placeholders. Updated footer branding to include the new unity_logo_tree.png image. Removed unused image assets and reorganized image files, moving some to favicon_io and adding unity_logo_tree.png.

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -55,7 +55,7 @@
         <header>
             <nav class="navbar navbar-expand-lg py-3">
                 <div class="container">
-                    <a href="index.html" class="navbar-brand">
+                    <a href="../index.html" class="navbar-brand">
                         <img src="../image/unity_logo.png" alt="Unity+ Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu-navigation">
@@ -71,10 +71,10 @@
                                 <a href="relato.html" class="nav-link">Relato</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Fórum</a>
+                                <a href="forum.html" class="nav-link">Fórum</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Gráficos</a>
+                                <a href="dashboards.html" class="nav-link">Gráficos</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contato.html" class="nav-link">Contato</a>
@@ -252,7 +252,10 @@
             <div class="container">
                 <div class="row g-5">
                     <div class="col-lg-4">
-                        <h3 class="footer-title">UNITY+</h3>
+                        <div class="d-flex align-items-center gap-2 mb-3">
+                            <img src="../image/unity_logo_tree.png" class="img-fluid" alt="Logo da Plataforma Unity Plus" style="max-width: 12%;">
+                            <h3>UNITY+</h3>
+                        </div>
                         <p>Plataforma de Diagnóstico Socioeconômico Comunitário que conecta comunidades e empresas para um desenvolvimento sustentável.</p>
                         <div class="social-links mt-4">
                             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -264,10 +267,10 @@
                     <div class="col-lg-2 col-md-4">
                         <h4 class="footer-title">Links Rápidos</h4>
                         <ul class="list-unstyled">
-                            <li class="mb-2"><a href="index.html">Início</a></li>
+                            <li class="mb-2"><a href="../index.html">Início</a></li>
                             <li class="mb-2"><a href="relato.html">Relato</a></li>
-                            <li class="mb-2"><a href="#">Fórum</a></li>
-                            <li class="mb-2"><a href="#">Gráficos</a></li>
+                            <li class="mb-2"><a href="forum.html">Fórum</a></li>
+                            <li class="mb-2"><a href="dashboards.html">Gráficos</a></li>
                             <li class="mb-2"><a href="contato.html">Contato</a></li>
                         </ul>
                     </div>
