--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                                 <a href="html/relato.html" class="nav-link">Relato</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Fórum</a>
+                                <a href="html/forum.html" class="nav-link">Fórum</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Gráficos</a>
+                                <a href="html/dashboards.html" class="nav-link">Gráficos</a>
                             </li>
                             <li class="nav-item">
                                 <a href="html/contato.html" class="nav-link">Contato</a>
@@ -312,7 +312,10 @@
             <div class="container">
                 <div class="row g-5">
                     <div class="col-lg-4">
-                        <h3 class="footer-title">UNITY+</h3>
+                        <div class="d-flex align-items-center gap-2 mb-3">
+                            <img src="image/unity_logo_tree.png" class="img-fluid" alt="Logo da Plataforma Unity Plus" style="max-width: 12%;">
+                            <h3>UNITY+</h3>
+                        </div>
                         <p>Plataforma de Diagnóstico Socioeconômico Comunitário que conecta comunidades e empresas para um desenvolvimento sustentável.</p>
                         <div class="social-links mt-4">
                             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -326,8 +329,8 @@
                         <ul class="list-unstyled">
                             <li class="mb-2"><a href="index.html">Início</a></li>
                             <li class="mb-2"><a href="html/relato.html">Relato</a></li>
-                            <li class="mb-2"><a href="#">Fórum</a></li>
-                            <li class="mb-2"><a href="#">Gráficos</a></li>
+                            <li class="mb-2"><a href="html/forum.html">Fórum</a></li>
+                            <li class="mb-2"><a href="html/dashboards.html">Gráficos</a></li>
                             <li class="mb-2"><a href="html/contato.html">Contato</a></li>
                         </ul>
                     </div>
