--- a/html/contato.html
+++ b/html/contato.html
@@ -54,7 +54,7 @@
     <body>
         <!-- Navbar -->
         <header>
-            <nav class="navbar navbar-expand-lg py-3">
+            <nav class="navbar navbar-expand-lg py-3 mb-1">
                 <div class="container">
                     <a href="../index.html" class="navbar-brand">
                         <img src="../image/unity_logo.png" alt="Unity+ Logo">
@@ -90,7 +90,7 @@
 
         <main>
             <!-- Top Section -->
-            <section class="contact-top top-section fade-up">
+            <section class="contact-top top-section bg-light fade-up">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6 mb-5 mb-lg-0">
