--- a/html/dashboards.html
+++ b/html/dashboards.html
@@ -51,7 +51,7 @@
     </head>
     <body class="d-flex flex-column">
         <header>
-            <nav class="navbar navbar-expand-lg py-3">
+            <nav class="navbar navbar-expand-lg py-3 mb-1">
                 <div class="container">
                     <a href="../index.html" class="navbar-brand">
                         <img src="../image/unity_logo.png" alt="Unity+ Logo">
@@ -90,7 +90,7 @@
 
         <main class="flex-grow-1">
             <!-- Seção de Controles e Filtros -->
-            <section class="dashboard-controls top-section py-4 bg-light">
+            <section class="dashboard-controls top-section py-4 bg-light fade-up">
                 <div class="container">
                     <div class="row g-3">
                         <div class="col-md-6 col-lg-3">
@@ -132,7 +132,7 @@
             </section>
 
             <!-- Seção Principal do Dashboard -->
-            <section class="dashboard-main py-5">
+            <section class="dashboard-main py-5 fade-up">
                 <div class="container">
                     <div class="row mb-5">
                         <div class="col-12">
