--- a/html/forum.html
+++ b/html/forum.html
@@ -52,7 +52,7 @@
     <body>
         <!-- Cabeçalho -->
         <header>
-            <nav class="navbar navbar-expand-lg py-3">
+            <nav class="navbar navbar-expand-lg py-3 mb-1">
                 <div class="container">
                     <a href="../index.html" class="navbar-brand">
                         <img src="../image/unity_logo.png" alt="Unity+ Logo">
