--- a/html/relato.html
+++ b/html/relato.html
@@ -51,7 +51,7 @@
     </head>
     <body class="d-flex flex-column">
         <header>
-            <nav class="navbar navbar-expand-lg py-3">
+            <nav class="navbar navbar-expand-lg py-3 mb-1">
                 <div class="container">
                     <a href="../index.html" class="navbar-brand">
                         <img src="../image/unity_logo.png" alt="Unity+ Logo">
