--- a/html/forum.html
+++ b/html/forum.html
@@ -89,23 +89,26 @@
             </nav>
         </header>
         <!-- Conteúdo Principal -->
-        <main class="container mb-5">
-            <div class="container my-5 py-5 px-4 bg-light top-section fade-up">
-                <div class="row align-items-center">
-                    <div class="col-lg-8">
-                        <h1 class="top-title"><i class="bi bi-people-fill"></i> Fórum Comunitário</h1>
-                        <p class="lead">Espaço para diálogo entre moradores, Petrobras e governo sobre as demandas da comunidade</p>
-                    </div>
-                    <div class="col-lg-4 text-lg-end">
-                        <button class="btn btn-light me-2"><i class="bi bi-search"></i> Buscar</button>
-                        <button class="btn btn-unity" data-bs-toggle="modal" data-bs-target="#newTopicModal">
-                            <i class="bi bi-plus-circle"></i> Novo Tópico
-                        </button>
+        <main class="mb-5 d-flex flex-column align-items-center">
+            <div class="bg-light w-100 mb-5">
+                <div class="container py-5 px-4 top-section fade-up">
+                    <div class="row align-items-center">
+                        <div class="col-lg-8">
+                            <h1 class="top-title"><i class="bi bi-people-fill"></i> Fórum Comunitário</h1>
+                            <p class="lead">Espaço para diálogo entre moradores, Petrobras e governo sobre as demandas da comunidade</p>
+                        </div>
+                        <div class="col-lg-4 text-lg-end">
+                            <button class="btn btn-light me-2"><i class="bi bi-search"></i> Buscar</button>
+                            <button class="btn btn-unity" data-bs-toggle="modal" data-bs-target="#newTopicModal">
+                                <i class="bi bi-plus-circle"></i> Novo Tópico
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
+            
 
-            <div class="row fade-up">
+            <div class="container row fade-up">
                 <!-- Barra Lateral -->
                 <div class="col-lg-3 mb-4">
                     <div class="card shadow-sm">
