--- a/html/dashboards.html
+++ b/html/dashboards.html
@@ -144,14 +144,14 @@
                     <div class="row g-4 mb-4">
                         <div class="col-lg-8">
                             <div class="dashboard-card h-100">
-                                <div class="card-header bg-unity3 text-white">
+                                <div class="card-header bg-light">
                                     <h5 class="mb-0"><i class="bi bi-bar-chart me-2"></i> Problemas por Categoria</h5>
                                 </div>
                                 <div class="card-body">
                                     <canvas id="barChart" height="300"></canvas>
                                 </div>
-                                <div class="card-footer bg-unity3">
-                                    <small class="text-light">Dados agregados dos últimos 3 meses.</small>
+                                <div class="card-footer bg-body-secondary">
+                                    <small>Dados agregados dos últimos 3 meses.</small>
                                 </div>
                             </div>
                         </div>
@@ -159,15 +159,14 @@
 
                         <!-- Formulário de Pesquisa -->
                         <div class="dashboard-card  d-flex flex-column">
-                            <div class="card-header bg-unity3 text-white">
-                                <h5 class="mb-0"><i class="bi bi-bell me-2"></i> Chamados</h5>
+                            <div class="card-header bg-light">
+                                <h5 class="mb-0"><i class="bi bi-bell me-2"></i> Relatos</h5>
                             </div>
                             <div class="card-body">
                                 <div class="alert-list">
-                                    <h6 class="mb-1">Pesquisar Protocolo</h6>
                                     <form action="#" method="POST">
                                         <div class="mb-3">
-                                            <label for="protocol-search" class="form-label">Acompanhamento de chamdos</label>
+                                            <label for="protocol-search" class="form-label">Pesquisar Protocolo</label>
                                             <input type="text" class="form-control" id="protocol-search" placeholder="Número do protocolo">
                                         </div>
                                         <div class="mb-3">
@@ -180,19 +179,19 @@
                                                 <option value="closed">Fechado</option>
                                             </select>
                                         </div>
-                                        <div class="col-md-6 col-lg-12 d-flex align-items-center">
+                                        <div class="col-md-6 col-lg-12 d-flex">
                                             <button type="button" class="btn btn-unity w-100" data-bs-toggle="modal" data-bs-target="#protocolModal">Buscar Chamados</button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
-                            <div class="card-footer bg-unity3 text-center">
-                                <small class="text-light">Total de chamados 1,245 </small>
+                            <div class="card-footer bg-body-secondary text-center">
+                                <small>Total de chamados 1,245 </small>
                             </div>
                         </div>
 
-                        <div class="dashboard-card  d-flex flex-column">
-                            <div class="card-header bg-unity3 text-white">
+                        <div class="dashboard-card d-flex flex-column">
+                            <div class="card-header bg-light">
                                 <h5 class="mb-0"><i class="bi bi-exclamation-triangle me-2"></i> Alertas Rápidos</h5>
                             </div>
                             <div class="card-body">
@@ -226,8 +225,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-footer bg-unity3 text-center">
-                                <small class="text-light">Atualizado em tempo real</small>
+                            <div class="card-footer bg-body-secondary text-center">
+                                <small>Atualizado em tempo real</small>
                             </div>
                         </div>
                     </div>
@@ -237,20 +236,20 @@
                     <div class="row g-4 mb-4">
                         <div class="col-lg-6">
                             <div class="dashboard-card h-100">
-                                <div class="card-header bg-unity3 text-white">
+                                <div class="card-header bg-light">
                                     <h5 class="mb-0"><i class="bi bi-graph-up me-2"></i> Tendência Temporal de Problemas</h5>
                                 </div>
                                 <div class="card-body">
                                     <canvas id="lineChart" height="300"></canvas>
                                 </div>
-                                <div class="card-footer bg-unity3">
-                                    <small class="text-light">Evolução mensal dos problemas reportados.</small>
+                                <div class="card-footer bg-body-secondary">
+                                    <small>Evolução mensal dos problemas reportados.</small>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="dashboard-card h-100">
-                                <div class="card-header bg-unity3 text-white">
+                                <div class="card-header bg-light">
                                     <h5 class="mb-0"><i class="bi bi-calculator me-2"></i> Simulador de Políticas Públicas</h5>
                                 </div>
                                 <div class="card-body">
@@ -312,7 +311,7 @@
                     <div class="row g-4">
                         <div class="col-lg-6">
                             <div class="dashboard-card h-100 d-flex flex-column">
-                                <div class="card-header bg-unity3 text-white">
+                                <div class="card-header bg-light">
                                     <h5 class="mb-0"><i class="bi bi-speedometer2 me-2"></i> Indicadores Chave</h5>
                                 </div>
                                 <div class="card-body">
@@ -352,14 +351,14 @@
                                         <i class="bi bi-info-circle me-2"></i> Estes indicadores são atualizados diariamente com base nos dados coletados.
                                     </div>
                                 </div>
-                                <div class="card-footer bg-unity3">
-                                    <small class="text-light">Atualizado em: 16/07/2025</small>
+                                <div class="card-footer bg-body-secondary">
+                                    <small>Atualizado em: 16/07/2025</small>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="dashboard-card h-100">
-                                <div class="card-header bg-unity3 text-white">
+                                <div class="card-header bg-light">
                                     <h5 class="mb-0"><i class="bi bi-file-earmark-text me-2"></i> Relatórios e Exportação</h5>
                                 </div>
                                 <div class="card-body">
@@ -412,8 +411,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-footer bg-unity3 text-center">
-                                    <button class="btn btn-light w-100">Salvar Configurações</button>
+                                <div class="card-footer bg-body-secondary text-center">
+                                    <button class="btn btn-unity w-100">Salvar Configurações</button>
                                 </div>
                             </div>
                         </div>
@@ -455,10 +454,10 @@
                     <div class="col-lg-2 col-md-4">
                         <h4 class="footer-title">Links Rápidos</h4>
                         <ul class="list-unstyled">
-                            <li class="mb-2"><a href="index.html">Início</a></li>
+                            <li class="mb-2"><a href="../index.html">Início</a></li>
                             <li class="mb-2"><a href="html/relato.html">Relato</a></li>
-                            <li class="mb-2"><a href="#">Fórum</a></li>
-                            <li class="mb-2"><a href="#">Gráficos</a></li>
+                            <li class="mb-2"><a href="forum.html">Fórum</a></li>
+                            <li class="mb-2"><a href="dashboards.html">Gráficos</a></li>
                             <li class="mb-2"><a href="html/contato.html">Contato</a></li>
                         </ul>
                     </div>
@@ -601,11 +600,13 @@
             </div>
         </div>
 
-        
-
         <a href="#" class="arrow-up">
             <i class="bi-arrow-up"></i>
         </a>
+
+        <div href="#" class="user rounded text-center fade-up">
+            <span>Acesso: <br> <strong>PETROBRAS</strong></span>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
