--- a/html/forum.html
+++ b/html/forum.html
@@ -112,7 +112,7 @@
                 <!-- Barra Lateral -->
                 <div class="col-lg-3 mb-4">
                     <div class="card shadow-sm">
-                        <div class="card-header bg-unity3 text-white">
+                        <div class="card-header bg-light">
                             <h5 class="mb-0"><i class="bi bi-filter-circle"></i> Filtros</h5>
                         </div>
                         <div class="card-body">
@@ -153,7 +153,7 @@
 
                     <!-- Votação Ativa -->
                     <div class="card shadow-sm mt-4">
-                        <div class="card-header bg-unity3 text-white">
+                        <div class="card-header bg-light">
                             <h5 class="mb-0"><i class="bi bi-check2-circle"></i> Votação Ativa</h5>
                         </div>
                         <div class="card-body">
@@ -170,7 +170,7 @@
                                 <input class="form-check-input" type="radio" name="vote" id="vote3">
                                 <label class="form-check-label" for="vote3">Construção de praça pública</label>
                             </div>
-                            <button class="btn btn-outline-unity3 w-100" onclick="comunityVote()">Votar</button>
+                            <button class="btn btn-unity w-100" onclick="comunityVote()">Votar</button>
 
                             <div class="progress progress-thin mt-3">
                                 <div class="progress-bar bg-unity3" role="progressbar" style="width: 45%"></div>
@@ -185,7 +185,7 @@
                 <!-- Lista de Discussões -->
                 <div class="col-lg-9">
                     <div class="card mb-4">
-                        <div class="card-header bg-unity3 text-white">
+                        <div class="card-header bg-light">
                             <h5 class="mb-0"><i class="bi bi-check2-circle me-2"></i> Prioridades da Comunidade</h5>
                         </div>
                         <div class="card-body">
@@ -243,7 +243,7 @@
                             <div class="progress mt-3" style="height: 10px;">
                                 <div class="progress-bar bg-unity3" style="width: 45%"></div>
                             </div>
-                            <small class="text-muted">45% da comunidade já votou. Votação encerra em 15 dias.</small>
+                            <small class="text-muted">45% da comunidade já votou. Votação se encerra em 15 dias.</small>
                         </div>
                     </div>
 
@@ -525,6 +525,10 @@
         <a href="#" class="arrow-up">
             <i class="bi-arrow-up"></i>
         </a>
+
+        <div href="#" class="user rounded text-center fade-up">
+            <span>Acesso: <br> <strong>TODOS USUÁRIOS</strong></span>
+        </div>
 
         <!-- Scripts -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
