--- a/html/login.html
+++ b/html/login.html
@@ -166,6 +166,10 @@
             </div>
         </main>
 
+        <div href="#" class="user rounded text-center fade-up">
+            <span>Acesso: <br> <strong>TODOS USUÁRIOS</strong></span>
+        </div>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" 
         crossorigin="anonymous"></script>
