--- a/html/relato.html
+++ b/html/relato.html
@@ -56,6 +56,9 @@
                     <a href="../index.html" class="navbar-brand">
                         <img src="../image/unity_logo.png" alt="Unity+ Logo">
                     </a>
+
+                    <span></span>
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu-navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -186,7 +189,7 @@
                                         <i class="bi bi-4-circle"></i>
                                     </div>
                                     <h5 class="card-title mt-3">Acompanhe</h5>
-                                    <p class="card-text">Monitore o progresso da sua solicitação pelo seu perfil</p>
+                                    <p class="card-text">Monitore o progresso da sua solicitação por aqui ou em seu perfil</p>
                                 </div>
                             </div>
                         </div>
@@ -233,11 +236,46 @@
                 </div>
             </section>
 
-            <!-- Seção de seleção de prioridade -->
             <section class="py-5 fade-up">
                 <div class="container">
-                    <div class="row justify-content-center mb-4">
-                        <div class="col-lg-8 me-auto">
+                    <div class="row mb-4">
+                        <div class="col-lg-8">
+                            <h2 class="mb-3 section-title fw-bold">Meus <span class="text-unity3">Relatos</span></h2>
+                            <p class="lead">Confira todos os relatos criados por você</p>
+                        </div>
+                    </div>
+
+                    <ul class="nav nav-pills mb-4">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#"><i class="bi bi-file-earmark-text-fill"></i> Todos os Relatos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="bi bi-clock"></i> Relatos em Tratamento</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="bi bi-check2"></i> Relatos Resolvidos</a>
+                        </li>
+                    </ul>
+
+                    <div class="py-5 px-3 mb-4 border rounded bg-light border-1">
+                        <div class="row align-items-center px-3 gap-3" id="report-container">
+                            <!-- Os cards aparecerão aqui -->
+                        </div>
+                    </div>
+
+                    <p>Busque pelo seu relato através do número de protocolo:</p>
+                    <div class="input-group w-50">
+                        <label for="search-report" class="input-group-text"><i class="bi bi-search"></i> Buscar</label>
+                        <input type="search" id="search-report" class="form-control" placeholder="BP2025-1607-1951">
+                    </div>
+                </div>
+            </section>
+
+            <!-- Seção de seleção de prioridade -->
+            <section class="py-5 bg-light fade-up">
+                <div class="container">
+                    <div class="row mb-4">
+                        <div class="col-lg-8 ">
                             <h2 class="mb-3 section-title fw-bold">Selecione a <span class="text-unity3">Prioridade</span></h2>
                             <p class="lead">Escolha o nível de urgência do problema que você quer reportar</p>
                         </div>
@@ -867,6 +905,10 @@
         <a href="#" class="arrow-up">
             <i class="bi-arrow-up"></i>
         </a>
+
+        <div href="#" class="user rounded text-center fade-up">
+            <span>Acesso: <br> <strong>TODOS USUÁRIOS</strong></span>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" 
