Update form defaults and UI styles in report pages
Set default values for report form fields in relato.html, adjust placeholder texts, and pre-select options for improved user experience. Updated CSS classes for user and card elements in dashboards.html and script.js to enhance layout and visual consistency.

--- a/html/dashboards.html
+++ b/html/dashboards.html
@@ -604,7 +604,7 @@
             <i class="bi-arrow-up"></i>
         </a>
 
-        <div href="#" class="user rounded text-center fade-up">
+        <div class="user rounded text-center bg-success fade-up">
             <span>Acesso: <br> <strong>PETROBRAS</strong></span>
         </div>
 
