Update button label to 'Buscar Relato'
Changed the button text from 'Buscar Chamados' to 'Buscar Relato' in dashboards.html for improved clarity or alignment with terminology.

--- a/html/dashboards.html
+++ b/html/dashboards.html
@@ -180,7 +180,7 @@
                                             </select>
                                         </div>
                                         <div class="col-md-6 col-lg-12 d-flex">
-                                            <button type="button" class="btn btn-unity w-100" data-bs-toggle="modal" data-bs-target="#protocolModal">Buscar Chamados</button>
+                                            <button type="button" class="btn btn-unity w-100" data-bs-toggle="modal" data-bs-target="#protocolModal">Buscar Relato</button>
                                         </div>
                                     </form>
                                 </div>
